actually fix wrapping

--- a/src/routes/SongView/SongView.css
+++ b/src/routes/SongView/SongView.css
@@ -145,7 +145,7 @@
 .lyrics-line {
     display: flex;
     align-items: flex-end;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     max-width: 100%;
 }
 
